feat: add passenger count in flight filter